--- a/frontend/src/app/pages/landing-page/landing-page.component.html
+++ b/frontend/src/app/pages/landing-page/landing-page.component.html
@@ -1,4 +1,4 @@
-<div id="carouselExampleCaptions" class="carousel carousel-dark slide" data-bs-interval="false" >
+<div id="carouselExampleCaptions" class="carousel carousel-dark slide" data-bs-interval="false">
   <div class="carousel-indicators">
     <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
     <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
@@ -40,7 +40,7 @@
                   <h1 class="PoppinsBold mb-3">¡Acierta con los colores!</h1>
                   <h3 class="PoppinsMedium mb-3">Si tienes daltonismo y trabajas con colores, esta aplicación web es para ti</h3>
                   <h5 class="PoppinsMedium mb-5">Deja atrás las confusiones y elige el color adecuado</h5>
-                    <button type="button" class="btn text-black" routerLink="/editor" id="botonEmpezar">Empezar ahora</button>
+                    <button type="button" class="btn text-black" routerLink="/editor" id="botonEmpezar">Probar ahora</button>
                 </div>
               </div>
             </div>
@@ -203,7 +203,7 @@
     <div class="carousel-item">
       <img src="../../../assets/img/bgSlider4.svg" class="d-block position-absolute" alt="fondoSlider" style="z-index: 0;">
       <div class="carousel-caption d-none d-md-block">
-        <iframe class="video" src="https://drive.google.com/file/d/1xH3UWuhfAJEvT-GETsUGHCRWELhci0z0/preview" allow="autoplay"></iframe>
+        <iframe class="video" src="https://drive.google.com/file/d/1KxsyHKIyUq8A0Rv09ARczjF3V-HTY6G8/preview" allow="autoplay"></iframe>
         <!-- <iframe class="video" src="https://www.youtube.com/embed/xw7Y2gviWbA" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe> -->
         <!-- <iframe src="https://drive.google.com/file/d/1xH3UWuhfAJEvT-GETsUGHCRWELhci0z0/preview" style="width: 70%; padding: 20px" height="760"></iframe> -->
       </div>
