--- a/frontend/src/app/pages/editor/editor.component.html
+++ b/frontend/src/app/pages/editor/editor.component.html
@@ -19,7 +19,7 @@
           <select [(ngModel)]="filter" (change)="filterImage()" name="color">
             <option value="-" selected>-</option>
             <option value="deuteranopia">Deuteranopía/Deuternomalía (verde/rojo)</option>
-            <option value="protanopia">Protanopía/Protanomalía (rojo/verde)</option>
+            <option value="protanopia">Protanopía/Protanomalía (verde/rojo)</option>
             <option value="tritanopia-av">Tritanopía/Tritanomalía (azul/verde)</option>
           </select>
         </div>
