--- a/frontend/src/app/pages/profile/profile.component.html
+++ b/frontend/src/app/pages/profile/profile.component.html
@@ -1,5 +1,5 @@
-<div class="contenedor position-relative">
-  <div>
+<div id="fondo" class="justify-content-center d-flex">
+  <div class="contenedor position-relative">
     <div class="border-radius-top bgBlue mb-2 d-flex justify-content-center align-items-center">
       <h5 class="text-center PoppinsBold">Información de la cuenta</h5>
       <img class="cursor-pointer" (click)="closeModal()" src="../../../assets/img/cruz.svg">
