--- a/frontend/src/app/pages/editor/editor.component.css
+++ b/frontend/src/app/pages/editor/editor.component.css
@@ -286,3 +286,7 @@ table::-webkit-scrollbar-thumb {
   border-radius: 5px;
   box-shadow: 0px 3px 5px 0px rgb(0 0 0 / 35%);
 }
+
+.disabled {
+  filter: contrast(0);
+}
