--- a/frontend/src/app/components/shared/nav-bar/nav-bar.component.html
+++ b/frontend/src/app/components/shared/nav-bar/nav-bar.component.html
@@ -1,19 +1,19 @@
 <div class="position-relative">
-  <nav class="navbar navbar-expand-lg navbar-light bg-light shadow">
-    <a (click)="goToLink('landing')" class="navbar-brand">
-      <img id="logo" src="../../../assets/img/logotipo.svg" alt="Logotipo de Cobli" class="d-inline-block align-text-top cursor-pointer">
-    </a>
-    <ng-container>
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
+  <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <div class="container-fluid">
+      <a (click)="goToLink('landing')" class="navbar-brand">
+        <img id="logo" src="../../../assets/img/logotipo.svg" alt="Logotipo de Cobli" class="d-inline-block align-text-top cursor-pointer">
+      </a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
-      <div class="collapse navbar-collapse justify-content-between" id="navbarText">
-        <ul class="navbar-nav mr-auto">
+      <div class="collapse navbar-collapse" id="navbarText">
+        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
           <li *ngIf="isLoggedIn">
             <a class="nav-link cursor-pointer" (click)="goToLink('gallery')">Inicio</a>
           </li>
         </ul>
-        <ul class="navbar-nav justify-content-end">
+        <span class="navbar-text">
           <li *ngIf="isLoggedIn" class="nav-item active">
             <a (click)="showProfile()" class="nav-link cursor-pointer">{{name}}</a>
           </li>
@@ -23,9 +23,9 @@
               <img class="icon cursor-pointer" src="assets/img/exit.svg" alt="Icono de salir">
             </a>
           </li>
-        </ul>
+        </span>
       </div>
-    </ng-container>
+    </div>
   </nav>
   <div *ngIf="profileShow" class="position-relative">
     <app-profile [userLoaded]="userLoaded" (buttonClicked)="closeProfile()" class="position-absolute"></app-profile>
