--- a/frontend/src/app/auth/register/register.component.html
+++ b/frontend/src/app/auth/register/register.component.html
@@ -57,13 +57,13 @@
       <li class="PoppinsSemiBold">Propiedad intelectual:</li>
       <p>
         Todo el contenido de la aplicación, incluyendo, pero no limitándose a, texto, gráficos, logotipos, imágenes, audio, video, software y
-        cualquier otro material contenido en la aplicación, es propiedad exclusiva de nuestra compañía. No se permite la reproducción, distribución, modificación,
+        cualquier otro material contenido en la aplicación, es propiedad exclusiva de Cobli. No se permite la reproducción, distribución, modificación,
          exhibición, venta o explotación de cualquier parte de la aplicación sin nuestro consentimiento previo y por escrito.
       </p>
       <li class="PoppinsSemiBold">Imágenes cargadas por los usuarios:</li>
       <p>
         La aplicación permite a los usuarios cargar imágenes que serán analizadas para obtener información sobre los colores. Al subir una imagen,
-         usted acepta que tiene derecho a utilizar la imagen y que no viola ninguna ley o derechos de autor. Usted otorga a nuestra compañía el derecho
+         usted acepta que tiene derecho a utilizar la imagen y que no viola ninguna ley o derechos de autor. Usted otorga a Cobli el derecho
           de utilizar y almacenar la imagen con el fin exclusivo de realizar el análisis de colores.
       </p>
       <li class="PoppinsSemiBold">Uso de la información:</li>
@@ -85,7 +85,7 @@
       </p>
       <li class="PoppinsSemiBold">Ley aplicable:</li>
       <p>
-        Estos términos y condiciones se regirán e interpretarán de acuerdo con las leyes del país en el que se encuentra nuestra compañía.
+        Estos términos y condiciones se regirán e interpretarán de acuerdo con las leyes del país en el que se encuentra Cobli.
       </p>
     </ol>
 
@@ -97,8 +97,8 @@
     <ol>
       <li class="PoppinsSemiBold">Recopilación de información</li>
       <p>
-        Cuando un usuario sube una imagen a [Nombre de la página web], recopilamos la imagen y cualquier información relacionada con ella, como los colores extraídos de la misma.
-        Esta información se almacena en nuestra base de datos para su posterior análisis.
+        Cuando un usuario sube una imagen a Cobli, recopilamos la imagen y cualquier información relacionada con ella, como los colores extraídos de la misma.
+        Esta información se almacena en nuestra base de datos para su posterior uso en la aplicación.
       </p>
       <li class="PoppinsSemiBold">Uso de la información</li>
       <p>
